@@ -104,6 +104,9 @@ Release 2.6.2 - UNRELEASED
     YARN-3194. RM should handle NMContainerStatuses sent by NM while
     registering if NM is Reconnected node (Rohith via jlowe)
 
+    YARN-3798. ZKRMStateStore shouldn't create new session without occurrance of 
+    SESSIONEXPIED. (ozawa and Varun Saxena)
+
 Release 2.6.1 - 2015-09-23
 
   INCOMPATIBLE CHANGES
